cros: Hide title bar when window in splitview mode.

Test: ash_unittests CustomFrameViewAshTest.HeaderVisibilityInSplitview
Bug: 800498
Change-Id: I8bbf318cf1406d788c0b48d9812ca3f15d74c4ae